# SecEv4LIA-local

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  codecov.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/docs/: api-index.md  introduction.mdx  sidebar.json
docs/docs/agents/: google-adk.mdx  index.mdx  ollama.mdx  openai-sdk.mdx
docs/docs/architecture/: system-overview.mdx
docs/docs/attacks/: advprefix.md  autodan_turbo.md  baseline.md  bon.md  cipherchat.md  flipattack.md  h4rm3l.md  index.mdx  pair.md  pap.md  tap.md
docs/docs/cli/: attack.md  attack.mdx  config.md  examples-ollama.md  initialization.md  overview.md  results.md
docs/docs/datasets/: custom-providers.md  file.md  huggingface.md  index.md  presets.md  troubleshooting.md
docs/docs/getting-started/: attack-tutorial.mdx  dashboard.mdx  datasets-tutorial.mdx  examples-ollama.mdx  installation.mdx  quick-security-scan.mdx  quick-start.mdx
docs/docs/risks/: custom-vulnerabilities.md  evaluation-campaigns.md  index.mdx  risk-categories.mdx  threat-profiles.md  vulnerabilities.md
docs/docs/sdk/: python-quickstart.md
docs/docs/secev4lia/: agent.md  errors.md  logger.md  utils.md
docs/docs/security/: ethical-guidelines.md  responsible-disclosure.md
docs/scripts/: generate_docs.py
docs/src/css/: custom.css
examples/google_adk/jailbreak_eval/: agent.py  hack.py
examples/google_adk/multi_tool_agent/: agent.py  hack.py
examples/langchain/rag/: README.md  agent_client.py  agent_server.py  ingest.py  read_db.py
examples/openai_sdk/rag/: hack.py
secev4lia/: __init__.py  agent.py  errors.py  logger.py  utils.py
secev4lia/attacks/: __init__.py  base.py  orchestrator.py  registry.py
secev4lia/attacks/evaluator/: __init__.py  base.py  evaluation_step.py  judge_evaluators.py  metrics.py  pattern_evaluators.py  sync.py
secev4lia/attacks/generator/: __init__.py  templates.py
secev4lia/attacks/objectives/: __init__.py  base.py  harmful_behavior.py  jailbreak.py  policy_violation.py
secev4lia/attacks/shared/: __init__.py  progress.py  prompt_parser.py  response_utils.py  router_factory.py  tui.py  utils.py
secev4lia/attacks/techniques/: __init__.py  base.py  config.py
secev4lia/cli/: __init__.py  config.py  main.py  utils.py
secev4lia/cli/commands/: __init__.py  agent.py  attack.py  config.py  examples.py  results.py  scan.py  web.py
secev4lia/cli/tui/: __init__.py  actions_logger.py  app.py  attack_specs.py  base.py  logger.py
secev4lia/datasets/: __init__.py  base.py  presets.py  registry.py
secev4lia/datasets/providers/: __init__.py  file.py  huggingface.py
secev4lia/examples/: __init__.py
secev4lia/risks/: __init__.py  base.py  profile_helpers.py  profile_types.py  registry.py  utils.py
secev4lia/router/: __init__.py  router.py  types.py
secev4lia/server/: client.py  errors.py  types.py
tests/: conftest.py
tests/e2e/: test_auth.py  test_google_adk.py
tests/integration/: __init__.py  conftest.py
tests/unit/: test_agent.py  test_client.py  test_client_extended.py  test_errors.py  test_logger.py  test_logger_extended.py  test_package_imports.py  test_utils.py
(+558 files in other folders)
