[project]
name = "secev4lia"
version = "0.6.0"
description = "SecEv4LIA is an open-source security toolkit to detect vulnerabilities of your AI Agents."
authors = [
    {name = "AI Security Lab", email = "ais@ai4i.it"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
keywords = ["security", "ai", "agents", "vulnerabilities", "testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "pydantic[email]>=2.0",
    "litellm>=1.69.2",
    "openai>=1.0.0",
    "rich>=14.0.0",
    "click>=8.1.0",
    "pyyaml>=6.0.0",
    "textual>=1.0.0",
    "python-dateutil>=2.8.0",
    "faiss-cpu>=1.13.2",
    "datasets>=2.14.0",
    "nicegui>=3.10.0",
    "flask>=3.1.3",
]


[dependency-groups]
dev = [
    "ruff>=0.11.9",
    "pytest>=8.3.5",
    "pre-commit>=4.2.0",
    "commitizen>=4.7.1",
    "cz-conventional-gitmoji>=0.7.0",
    "pytest-cov>=6.1.1",
    "pytest-rerunfailures>=14.0",
    "google-adk>=1.4.2",
    "anyio>=4.3.0",
    "pytest-asyncio>=0.23.7,<1.4.0",
    "flask>=3.1.2",
    "mcp>=1.21.2",
    "secev4lia",
]
llm-local = [
    "vllm>=0.11.0; sys_platform != 'win32'",
    "transformers>=4.40,<5.0; sys_platform != 'win32'",
]
docs = [
    "pydoc-markdown>=4.8.2",
    "toml>=0.10.2",
    "packaging>=24,<27",
    "requests>=2.31.0",
]

[project.scripts]
secev = "secev4lia.cli.main:cli"

[tool.commitizen]
name = "cz_gitmoji"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["secev4lia"]

[tool.hatch.build.targets.sdist]
include = [
    "/secev4lia",
    "/assets",
]

[tool.coverage.run]
data_file = "reports/.coverage"
source = ["secev4lia"]
omit = [
    "secev4lia/cli/tui/*",
]

[tool.coverage.report]
fail_under = 50
precision = 1
show_missing = true
skip_covered = true
exclude_lines = [
  "pragma: no cover",
  "@overload",
  'if __name__ == "__main__":',
  "if TYPE_CHECKING:",
]

[tool.coverage.xml]
output = "reports/coverage.xml"

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration", "tests/e2e"]
addopts = "--ignore=tests/e2e/attacks --ignore=secev4lia/examples"
markers = [
    "integration: marks integration tests (use --run-integration to enable)",
    "ollama: marks tests that require a running Ollama instance",
    "openai_sdk: marks tests that require OpenAI/OpenRouter API key",
    "google_adk: marks tests that require a live Google ADK server (use --run-google-adk to enable)",
    "litellm: marks tests that require a LiteLLM-compatible backend",
    "e2e: marks end-to-end tests that require external services",
    "slow: marks slow-running tests",
]

[tool.uv.sources]
secev4lia = { workspace = true }
